--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.20.7",
     "@next/font": "13.1.1",
+    "@popperjs/core": "2.11.6",
     "bootstrap": "^5.2.3",
     "cross-env": "^7.0.3",
     "google-map-react": "^2.2.0",
     "next": "13.1.1",
     "next-redux-wrapper": "^4.0.1",
-    "node-sass": "^8.0.0",
+    "node-sass": "^7.0.3",
     "pnpm": "^7.21.0",
+    "prop-types": "15.6.0",
     "public": "^0.1.5",
     "react": "18.2.0",
     "react-accessible-accordion": "^5.0.0",
@@ -36,13 +39,14 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
     "src": "^1.1.2",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "eslint": "8.30.0",
     "eslint-config-next": "^12.3.4"
   },
-   "eslintConfig": {
+  "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
