--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@popperjs/core": "2.11.6",
     "bootstrap": "^5.2.3",
     "cross-env": "^7.0.3",
+    "formik": "^2.2.9",
     "google-map-react": "^2.2.0",
     "next": "13.1.1",
     "next-redux-wrapper": "^4.0.1",
@@ -28,6 +29,7 @@
     "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
+    "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-player": "^2.11.0",
@@ -40,7 +42,8 @@
     "sass": "^1.57.1",
     "src": "^1.1.2",
     "swiper": "^8.4.5",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.30.0",
