--- a/package.json
+++ b/package.json
@@ -42,14 +42,18 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
+    "sheetdb-node": "^0.0.12",
     "src": "^1.1.2",
     "swiper": "^8.4.5",
     "typescript": "^4.9.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
-    "eslint-config-next": "^12.3.4"
+    "eslint-config-next": "^12.3.4",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   },
   "browserslist": {
     "production": [
@@ -62,5 +66,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "presets": [
+    "@babel/preset-env",
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
+  ]
 }
