finish announcement api
Signed-off-by: Hovah <hovahyii@gmail.com>

--- a/package.json
+++ b/package.json
@@ -67,6 +67,12 @@
       "last 1 safari version"
     ]
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "child_process": false
+  },
   "presets": [
     "@babel/preset-env",
     [
