--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.1.1",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^7.0.3",
+    "nprogress": "^0.2.0",
     "pnpm": "^7.21.0",
     "prop-types": "15.6.0",
     "public": "^0.1.5",
