--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.2.9",
     "google-map-react": "^2.2.0",
     "googleapis": "^110.0.0",
+    "lodash": "^4.17.21",
     "next": "13.1.1",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^7.0.3",
