--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "next": "13.1.1",
     "next-redux-wrapper": "^4.0.1",
+    "node-sass": "^8.0.0",
     "nprogress": "^0.2.0",
     "pnpm": "^7.27.0",
     "prop-types": "15.6.0",
