--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.1.1",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^8.0.0",
+    "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "pnpm": "^7.27.0",
     "prop-types": "15.6.0",
@@ -35,11 +36,13 @@
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
     "react-icons": "^4.7.1",
+    "react-image-magnify": "^2.7.4",
     "react-intersection-observer": "^9.4.2",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-player": "^2.11.2",
     "react-redux": "^8.0.5",
     "react-responsive-modal": "^6.4.1",
+    "react-slick": "^0.29.0",
     "react-tabs": "^6.0.0",
     "react-visibility-sensor": "^5.1.1",
     "redux": "^4.2.1",
